<resources>
    <string name="app_name">MovieBrowz</string>
    <string name="action_settings">Settings</string>
    <string name="action_load_popular_movies">Popular Movies</string>
    <string name="action_load_top_rated_movies">Top Rated Movies</string>
    <string name="action_load_saved_movies">Saved Movies</string>

    <!-- Strings used for fragments for navigation -->
    <string name="movieList_fragment_label">Movie List</string>
    <string name="movieDetail_fragment_label">Movie Details</string>
    <string name="movieReview_fragment_label">Movie Reviews</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="review">Reviews</string>

    <!-- Strings for links -->
    <string name="imdb">IMDb</string>
    <string name="homepage">Homepage</string>
    <string name="video_link">Open link</string>

    <!-- Load, save, remove -->
    <string name="movies_are_being_loaded">Movies are being Loaded</string>
    <string name="reviews_are_being_loaded">Reviews are being Loaded</string>
    <string name="videos_are_being_loaded">Videos are being Loaded</string>
    <string name="save_locally">Add Locally</string>
    <string name="remove_locally">Remove Locally</string>

    <!-- images -->
    <string name="backdrop_image">Backdrop image</string>

    <!-- Dialog strings -->
    <string name="invalid_url">The URL for this link is invalid</string>
    <string name="invalid_homepage">This movie has no homepage</string>
    <string name="ok">OK</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>