<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MovieListFragment">

    <fragment
        android:id="@+id/MovieListFragment"
        android:name="com.ltu.m7019e.moviebrowz.MovieListFragment"
        android:label="@string/movieList_fragment_label"
        tools:layout="@layout/fragment_movie_list">

        <action
            android:id="@+id/action_MovieListFragment_to_MovieDetailFragment"
            app:destination="@id/MovieDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/MovieDetailFragment"
        android:name="com.ltu.m7019e.moviebrowz.MovieDetailFragment"
        android:label="@string/movieDetail_fragment_label"
        tools:layout="@layout/fragment_movie_detail">

        <action
            android:id="@+id/action_MovieDetailFragment_to_MovieListFragment"
            app:destination="@id/MovieListFragment" />
        <argument
            android:name="movie"
            app:argType="com.ltu.m7019e.moviebrowz.model.Movie" />
        <action
            android:id="@+id/action_MovieDetailFragment_to_movieReviewFragment"
            app:destination="@id/movieReviewFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieReviewFragment"
        android:name="com.ltu.m7019e.moviebrowz.MovieReviewFragment"
        android:label="@string/movieReview_fragment_label"
        tools:layout="@layout/fragment_movie_review">
        <action
            android:id="@+id/action_movieReviewFragment_to_MovieDetailFragment"
            app:destination="@id/MovieDetailFragment" />
        <argument
            android:name="movie"
            app:argType="com.ltu.m7019e.moviebrowz.model.Movie" />
    </fragment>
</navigation>