<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="movie"
            type="com.ltu.m7019e.moviebrowz.model.Movie" />
        <variable
            name="viewModel"
            type="com.ltu.m7019e.moviebrowz.viewmodel.MovieDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        tools:context=".MovieDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="95dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/release_date">

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="10dp"
                    android:text="@{movie.overview}"
                    android:textColor="#FFFFFF"
                    tools:text="Overview" />
            </ScrollView>

            <Button
                android:id="@+id/homepage_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:insetLeft="0dp"
                android:insetTop="10dp"
                android:insetRight="0dp"
                android:insetBottom="10dp"
                android:text="@string/homepage"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toEndOf="@+id/imdb_link"
                app:layout_constraintTop_toTopOf="@+id/imdb_link" />

            <TextView
                android:id="@+id/movie_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@{movie.title}"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_backdrop"
                tools:text="Title" />

            <TextView
                android:id="@+id/movie_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.genreString}"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/movie_detail_title"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_title"
                tools:text="Genres" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{movie.releaseDate}"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/movie_detail_title"
                app:layout_constraintTop_toBottomOf="@+id/imdb_link"
                tools:text="Release date" />

            <ImageView
                android:id="@+id/movie_detail_backdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/backdrop_image"
                app:backdropImageUrl="@{movie.backdropPath}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <Button
                android:id="@+id/imdb_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="5dp"
                android:insetTop="10dp"
                android:insetRight="15dp"
                android:insetBottom="10dp"
                android:text="@string/imdb"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="@+id/movie_detail_title"
                app:layout_constraintTop_toBottomOf="@+id/movie_genres" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/back_to_movie_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/remove_from_database"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:contentDescription="@string/remove_locally"
                android:focusable="true"
                android:onClick="@{ () -> viewModel.onRemoveMovieButtonClicked(movie, viewModel.movieDetail, viewModel.genreList)}"
                android:scaleX="1.6"
                android:scaleY="1.6"
                android:visibility="@{viewModel.isFavorite ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/back_to_movie_list"
                app:layout_constraintEnd_toStartOf="@+id/movie_review"
                app:layout_constraintStart_toEndOf="@+id/back_to_movie_list"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <Button
                android:id="@+id/movie_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/review"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/save_to_database"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:contentDescription="@string/save_locally"
                android:onClick="@{ () -> viewModel.onSaveMovieButtonClicked(movie, viewModel.movieDetail, viewModel.genreList)}"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:visibility="@{viewModel.isFavorite ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="@+id/back_to_movie_list"
                app:layout_constraintEnd_toStartOf="@+id/movie_review"
                app:layout_constraintStart_toEndOf="@+id/back_to_movie_list"
                app:srcCompat="@android:drawable/btn_star_big_off" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--@{movie.detail.genresToString()}-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>